added landing page

--- a/views/css/home.css
+++ b/views/css/home.css
@@ -3,7 +3,7 @@
 
 /* --- 1. SETTING DASAR --- */
 .stApp {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito';
 }
 
 /* --- 2. KARTU PUTIH (CONTAINER & FORM) --- */
