--- a/views/css/home.css
+++ b/views/css/home.css
@@ -1,9 +1,22 @@
 /* style.css - Annaira Home Spa (Versi Optimal dengan config.toml) */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap');
 
+@keyframes pageTransition {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 /* --- 1. SETTING DASAR --- */
 .stApp {
     font-family: 'Nunito';
+    animation: pageTransition 0.8s ease-out;
 }
 
 /* --- 2. KARTU PUTIH (CONTAINER & FORM) --- */
