--- a/views/css/landing.css
+++ b/views/css/landing.css
@@ -1,9 +1,93 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Nunito:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap');
+
+@keyframes pageTransition {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.stApp {
+    font-family: 'Nunito';
+    animation: pageTransition 0.8s ease-out;
+}
+
+@keyframes glitch {
+    0% {
+        transform: translate(0);
+        text-shadow: -2px 0 #ff00c1, 2px 0 #00fff9;
+    }
+    20% {
+        transform: translate(-3px, 3px);
+        text-shadow: -2px 0 #ff00c1, 2px 0 #00fff9;
+    }
+    40% {
+        transform: translate(-3px, -3px);
+        text-shadow: 2px -2px #ff00c1, -2px 2px #00fff9;
+    }
+    60% {
+        transform: translate(3px, 3px);
+        text-shadow: -2px 0 #ff00c1, 2px 0 #00fff9;
+    }
+    80% {
+        transform: translate(3px, -3px);
+        text-shadow: 2px -2px #ff00c1, -2px 2px #00fff9;
+    }
+    100% {
+        transform: translate(0);
+    }
+}
+
+/* Terapkan pada tombol saat diklik (active) */
+.stButton button:active {
+    animation: glitch 0.3s cubic-bezier(.25, .46, .45, .94) both;
+    background-color: #604F3B !important; /* Berubah warna sekejap saat glitch */
+    color: white !important;
+    border: none !important;
+}
+
+@media (max-width: 768px) {
+    .hero-container {
+        padding: 0 5% 0 5% !important; /* Margin atas dikecilkan jadi 40px */
+    }
+
+    .hero-title {
+        font-size: 2rem !important; /* Judul dikecilkan agar tidak makan tempat */
+        margin-bottom: 15px !important;
+    }
+
+    .hero-subtitle {
+        font-size: 1.1rem !important;
+        margin-bottom: 15px !important;
+        max-width: 100% !important;
+    }
+
+    .hero-small-text {
+        font-size: 1rem !important;
+        margin-bottom: 20px !important;
+    }
+    
+    .hero-footer-right {
+        position: relative !important; /* Biar tidak menutupi tombol di layar pendek */
+        bottom: 0 !important;
+        right: 0 !important;
+        text-align: center !important;
+        margin-top: 30px;
+    }
+}
 
 [data-testid="stMainViewBlockContainer"] {
-    padding: 0 !important;
+    padding: 0rem !important;
     max-width: 100% !important;
 }
+
+[data-testid="stVerticalBlock"] {
+        gap: 0rem !important;
+    }
 
 header {visibility: hidden;} 
 [data-testid="stSidebar"] {display: none;}
@@ -74,7 +158,7 @@ header {visibility: hidden;}
     right: 5%;
     color: #604F3B;
     font-size: 0.95rem;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito';
     letter-spacing: 1px;
     font-weight: 700 !important;
 }
