--- a/views/css/home.css
+++ b/views/css/home.css
@@ -22,6 +22,7 @@
 
 .block-container {
     padding-top: 0rem;
+    padding-bottom: 1rem;
 }
         
 /* Menghilangkan header transparan bawaan Streamlit */
